[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# rust 生成的 binary size 太大了，开了这个优化后，hello world 程序从原来的 8M 降到了 240K  
# 跟 gcc 编出来的 8K 还是差很远呢！！  
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
